fix(arc-238): fix pagination layout on mobile

--- a/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
+++ b/src/modules/shared/components/PaginationBar/PaginationBar.module.scss
@@ -11,10 +11,6 @@ $component: "c-pagination-bar";
 		}
 
 		&:nth-child(3n + 2) {
-			justify-self: center;
-		}
-
-		&:nth-child(3n + 3) {
 			justify-self: right;
 			margin-right: -$button-horizontal-whitespace;
 		}
@@ -32,7 +28,7 @@ $component: "c-pagination-bar";
 		}
 
 		&:nth-child(3n + 2) {
-			justify-self: center;
+			justify-self: right;
 		}
 
 		&:nth-child(3n + 3) {
@@ -47,19 +43,13 @@ $component: "c-pagination-bar";
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: min-content;
 	align-items: center;
-	justify-items: center;
-
-	:global(.c-pagination) {
-		grid-row-start: 1;
-		grid-column: 1 / 3;
-	}
 
 	&:not(.#{$component}--back-to-top) {
 		@include c-pagination-bar-two-item-justify;
 	}
 
 	&__back-to-top {
-		display: none;
+		display: none !important; // Override button styles
 	}
 
 	&--back-to-top {
@@ -69,16 +59,12 @@ $component: "c-pagination-bar";
 
 		@include respond-at("md") {
 			@include c-pagination-bar-three-item-justify;
-
-			:global(.c-pagination) {
-				grid-column: 2 / 3;
-			}
 		}
-		
+
 		.#{$component} {
 			&__back-to-top {
 				@include respond-at("md") {
-					display: initial;
+					display: initial !important; // Override button styles
 				}
 			}
 		}
